--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,9 @@
     "mnapoli/silly": "^1.3"
   },
   "autoload": {
+    "psr-4": {
+      "Snowdog\\DevTest\\": "src"
+    },
     "files": [
       "src/components.php",
       "lib/CacheWarm.php"
